# nixt

./: .gitignore  Cargo.toml  build.rs  default.nix  shell.nix
.devcontainer/: Dockerfile  devcontainer.json  rustfmt.toml
arena/: Cargo.toml
arena/src/: lib.rs
cons-list/: Cargo.toml
cons-list/src/: lib.rs
core/: Cargo.toml
core/src/: base32.rs  derivation.rs  hash.rs  lib.rs  path.rs  path_info.rs  settings.rs  store.rs
core/src/archive/: mod.rs
core/src/hash/: mod.rs
core/src/store/: mod.rs
core/src/store/local/: gc.rs  lock.rs  mod.rs
corepkgs/: config.nix
eval/: Cargo.toml  README.md
eval/src/: builtins.rs  context.rs  error.rs  ext.rs  lib.rs  operators.rs  primop.rs  scope.rs  source_tree.rs  thunk.rs  value.rs
eval/src/builtins/: attrs.rs  derivation.rs  fetch.rs  functions.rs  json.rs  lists.rs  mod.rs  strings.rs  sys.rs  versions.rs
examples/: diagnostic.rs
gen-settings/: Cargo.toml
gen-settings/src/: lib.rs
repl/: Cargo.toml
rix-arena/: Cargo.toml
rix-syntax/: Cargo.toml
rix-syntax/src/: expr.rs  lib.rs  parse.rs  span.rs  syntax.lalrpop  syntax.rs
src/: base32.rs  builtins.rs  config.rs  derivation.rs  error.rs  eval.rs  ext.rs  globals.rs  goal.rs  hash.rs  lib.rs  lock.rs  logger.rs  operators.rs  path.rs  path_info.rs  prelude.rs  primop.rs  settings.rs  source_tree.rs  sqlite.rs  thunk.rs  util.rs  value.rs  worker.rs
src/archive/: mod.rs  scan.rs  sink.rs
src/arena/: mod.rs  mutex.rs
src/builtins/: attrs.rs  derivation.rs  fetch.rs  functions.rs  json.rs  lists.rs  mod.rs  strings.rs  sys.rs  versions.rs
src/derivation/: mod.rs  parse.rs  print.rs
src/eval/: builtins.rs  context.rs  derivation.rs  error.rs  mod.rs  operators.rs  primop.rs  tests.rs  thunk.rs  value.rs
src/eval/builtins/: attrs.rs  derivation.rs  fetch.rs  functions.rs  json.rs  lists.rs  mod.rs  strings.rs  sys.rs  versions.rs
src/eval2/: builtins.rs  context.rs  mod.rs  operators.rs  primop.rs  string.rs  tests.rs  value.rs
src/fetch/: cache.rs  mod.rs  tar.rs
src/fetch/tar/: sys.rs
src/goal/: derivation.rs  mod.rs
src/goal/derivation/: linux.rs
src/goal2/: derivation.rs  mod.rs
src/goal2/derivation/: linux.rs  macos.rs
src/hash/: mod.rs  sink.rs
src/settings/: cli.rs  mod.rs
src/store/: mod.rs
src/store/local/: canonicalise.rs  db.rs  gc.rs  lock.rs  mod.rs
src/sync/: fs_lock.rs  mod.rs  user_lock.rs
src/syntax/: expr.rs  lexer.rs  mod.rs  parse.lalrpop  parse.rs  parser.lalrpop  span.rs
src/util/: base32.rs  cons_list.rs  fs.rs  io.rs  mod.rs  pid.rs  task.rs
store/: Cargo.toml  build.rs
store/src/: lib.rs
store/src/local/: lock.rs  mod.rs
syntax/: Cargo.toml
syntax/src/: expr.rs  lexer.rs  lib.rs  parse.lalrpop  parse.rs  span.rs
syntax/src/expr/: symbol.rs
tests/: basic.rs  basic_build.rs  basic_eval.rs  error.nix  fd.rs
util/: Cargo.toml
util/src/: error.rs  lib.rs
