[package]
name = "rnix"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
binascii = "0.1.4"
codespan = "0.9.5"
codespan-reporting = "0.9.5"
derive_more = "0.99.9"
dirs-next = "1.0.1"
downcast-rs = "1.2.0"
enum-as-inner = "0.3.3"
gen-settings = { path = "gen-settings" }
im = "15.0.0"
itertools = "0.9.0"
lalrpop-util = "0.19.0"
lazy_static = "1.4.0"
libarchive = "0.1.1"
libarchive3-sys = "0.1.2"
libc = "0.2.74"
log = "0.4.11"
maplit = "1.0.2"
num_cpus = "1.13.0"
once_cell = "1.4.0"
parking_lot = "0.11.0"
path_abs = "0.5.0"
petgraph = "0.5.1"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
regex = "1.3.9"
rusqlite = { version = "0.23.1", features = ["trace"] }
rust-crypto = "0.2.36"
rustyline = "6.2.0"
serde = "1.0.114"
serde_json = "1.0.57"
string_cache = "0.8.0"
structopt = "0.3.16"
tee_readwrite = "0.1.0"
tempfile = "3.1.0"
termcolor = "1.1.0"
thiserror = "1.0.20"
unix = { package = "nix", version = "0.18.0" }
ureq = "1.3.0"
users = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
linux-personality = "1.0.0"
netdevice = "0.1.1"
rlimit = "0.3.0"

[build-dependencies]
lalrpop = "0.19.0"

[dev-dependencies]
assert_matches = "1.3.0"
hex = "0.4.2"
proptest = "0.10.0"
