[package]
name = "rix"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

[dependencies]
aho-corasick = "0.7.14"
anyhow = "1.0.32"
base64 = "0.13.0"
binascii = "0.1.4"
codespan = "0.9.5"
codespan-reporting = "0.9.5"
crossbeam = "0.8.0"
ctrlc = { version = "3.1.6", features = ["termination"] }
curl = "0.4.33"
derivative = "2.1.1"
derive_more = "0.99.10"
dirs-next = "1.0.1"
dns-lookup = "1.0.4"
gen-settings = { path = "gen-settings" }
im = "15.0.0"
indicatif = { version = "0.15.0", features = ["improved_unicode"] }
itertools = "0.9.0"
lalrpop-util = "0.19.1"
lazy_static = "1.4.0"
libarchive = "0.1.1"
libarchive3-sys = "0.1.2"
libc = "0.2.77"
maplit = "1.0.2"
num_cpus = "1.13.0"
once_cell = "1.4.1"
parking_lot = "0.11.0"
paste = "1.0.2"
path_abs = "0.5.0"
rand = "0.7.3"
regex = "1.3.9"
rusqlite = { version = "0.24.0", features = ["trace"] }
rust-crypto = "0.2.36"
rustyline = "6.2.0"
serde = "1.0.116"
serde_json = "1.0.57"
slog = { version = "2.5.2", features = ["max_level_trace"] }
slog-async = "2.5.0"
slog-atomic = "3.0.0"
slog-envlogger = "2.2.0"
slog-json = "2.3.0"
slog-scope = "4.3.0"
slog-stdlog = "4.1.0"
slog-term = "2.6.0"
string_cache = "0.8.0"
structopt = "0.3.20"
subslice = "0.2.2"
tee_readwrite = "0.1.0"
tempfile = "3.1.0"
termcolor = "1.1.0"
thiserror = "1.0.20"
unix = { package = "nix", version = "0.18.0" }
ureq = "1.4.1"
users = "0.10.0"
webpki = "0.21.3"

[target.'cfg(target_os = "linux")'.dependencies]
ipc-channel = "0.14.1"
netdevice = "0.1.1"
prctl = "1.0.0"
# linux-personality = "1.0.0"
# rlimit = "0.4.0"

[build-dependencies]
lalrpop = "0.19.1"

[dev-dependencies]
assert_matches = "1.3.0"
hex = "0.4.2"
proptest = "0.10.1"
