[package]
name = "nix-core"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix-util = { path = "../util" }
derive_more = "0.99.9"
thiserror = "1.0.20"
log = "0.4.11"
lazy_static = "1.4.0"
binascii = "0.1.4"
rust-crypto = "0.2.36"
once_cell = "1.4.0"
fs2 = "0.4.3"
nix = "0.17.0"

[dev-dependencies]
assert_matches = "1.3.0"
proptest = "0.10.0"
hex = "0.4.2"
