[package]
name = "nix-core"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

[dependencies]
derive_more = "0.99.9"
thiserror = "1.0.20"
log = "0.4.11"
lazy_static = "1.4.0"
binascii = "0.1.4"
rust-crypto = "0.2.36"
once_cell = "1.4.0"
unix = { package = "nix", version = "0.17.0" }

nix-util = { path = "../util" }

[dev-dependencies]
assert_matches = "1.3.0"
proptest = "0.10.0"
hex = "0.4.2"
