[package]
name = "eval"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax = { path = "../syntax" }
arena = { path = "../arena" }
cons-list = { path = "../cons-list" }
tokio = { version = "0.2.21", features = ["fs", "macros"] }
codespan = "0.9.5"
generational-arena = "0.2.8"
anyhow = "1.0.31"
thiserror = "1.0.20"
codespan-reporting = "0.9.5"
futures = "0.3.5"
derive_more = "0.99.9"
log = "0.4.8"
async-recursion = "0.3.1"
static_assertions = "1.1.0"
