[package]
name = "nix-eval"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

[dependencies]
async-std = "1.6.2"
codespan = "0.9.5"
codespan-reporting = "0.9.5"
termcolor = "1.1.0"
log = "0.4.11"
async-recursion = "0.3.1"
futures = "0.3.5"
im = "15.0.0"
parking_lot = "0.11.0"
serde_json = "1.0.56"
path_abs = "0.5.0"

nix-util = { path = "../util" }
arena = { path = "../arena" }
nix-syntax = { path = "../syntax" }
nix-core = { path = "../core" }
itertools = "0.9.0"

[dev-dependencies]
tar = "0.4.29"
xz2 = "0.1.6"
reqwest = "0.10.6"
pretty_env_logger = "0.4.0"
tempfile = "3.1.0"
assert_matches = "1.3.0"
