[package]
name = "nix-eval"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

[dependencies]
codespan = "0.9.5"
codespan-reporting = "0.9.5"
termcolor = "1.1.0"
log = "0.4.11"
im = "15.0.0"
parking_lot = "0.11.0"
serde_json = "1.0.56"
path_abs = "0.5.0"
itertools = "0.9.0"
regex = "1.3.9"
lazy_static = "1.4.0"
backtrace = "0.3.50"
thiserror = "1.0.20"

arena = { path = "../arena" }
nix-core = { path = "../core" }
nix-store = { path = "../store" }
nix-syntax = { path = "../syntax" }
nix-util = { path = "../util" }

[dev-dependencies]
pretty_env_logger = "0.4.0"
assert_matches = "1.3.0"
