[package]
name = "rix-syntax"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

[dependencies]
codespan = "0.9.5"
derive_more = "0.99.11"
lalrpop-util = "0.19.1"
lazy_static = "1.4.0"
regex = "1.4.1"
rix-arena = { path = "../rix-arena" }
string_cache = "0.8.0"
thiserror = "1.0.21"

[build-dependencies]
lalrpop = "0.19.1"
