[package]
name = "nix-syntax"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.0"
derive_more = "0.99.9"
regex = "1.3.9"
lazy_static = "1.4.0"
string_cache = "0.8.0"
codespan-reporting = "0.9.5"
codespan = "0.9.5"
thiserror = "1.0.20"
arena = { path = "../arena" }

[build-dependencies]
lalrpop = "0.19.0"
